--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.3.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.27.0",
+    "react-select": "^5.8.3",
     "react-select-country-list": "^2.2.3",
     "typewriter-effect": "^2.21.0",
     "yup": "^1.4.0"
